force-app/main/default/objects/Paypal_Order__c/Paypal_Order__c.object-meta.xml
<CustomObject>
    <label>Paypal Order</label>
    <nameField>
        <displayFormat>PAYPAL-ID-{000000}</displayFormat>
        <label>Paypal Order ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Paypal Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>