force-app/main/default/objects/Paypal_Order__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Paypal Orders</relationshipLabel>
    <relationshipName>Paypal_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>